[gd_scene load_steps=2 format=3 uid="uid://plufi13miyqa"]

[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_3or5f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3or5f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Mid" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/Mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/Mid"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PlayButton" type="Button" parent="HBoxContainer/Mid/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="Adress" type="HBoxContainer" parent="HBoxContainer/Mid/Buttons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51

[node name="Remote" type="LineEdit" parent="HBoxContainer/Mid/Buttons/Adress"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="ConnectButton" type="Button" parent="HBoxContainer/Mid/Buttons/Adress"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="Multiplayer" type="HBoxContainer" parent="HBoxContainer/Mid/Buttons"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51

[node name="HostButton" type="Button" parent="HBoxContainer/Mid/Buttons/Multiplayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="ClientButton" type="Button" parent="HBoxContainer/Mid/Buttons/Multiplayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Client"

[node name="ExitButton" type="Button" parent="HBoxContainer/Mid/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="Panel2" type="Panel" parent="HBoxContainer/Mid"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel3" type="Panel" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/Mid/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Mid/Buttons/Adress/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Mid/Buttons/Multiplayer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Mid/Buttons/Multiplayer/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Mid/Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
